# thesis

./: .gitignore
001.first-fine-tuning/: .gitignore  README.md  download_model_and_dataset.py  infer.py  inspect_data.py  merge_lora_to_base.py  pyproject.toml  requirements.txt  train.py  train2.py  train3.py  train_1.py  train_2.py
slurm/: README.md  setup.sh
slurm/.plans/: 0001. fix plan.md  0002. fix plan.md  0003. fix plan.md
slurm/etc/logrotate.d/: slurm
slurm/etc/slurm/: cgroup.conf  epilog.sh  gres.conf  slurm.conf  slurmdbd.conf
